tests/Metalama.Framework.Tests.Integration/Tests/Aspects/InvalidCode/ConflictScope.t.cs
// CompileTimeAspectPipeline.ExecuteAsync failed.
// Error LAMA0226 on `Dictionary<IMethod,TargetCode>`: `'Dictionary<IMethod, TargetCode>' is invalid because 'TargetCode' is run-time but 'IMethod' is compile-time.`